Remove redundant roles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="hero hero-bg is-fullheight" role="banner">
     <div id="skipToMenu" title="Skip to Keyboard Navigation" class="skip-menu">
-      <nav role="navigation" aria-labelledby="skipToMenu">
+      <nav aria-labelledby="skipToMenu">
         <ul>
             <li><a href="#navbarMenu">Skip to navbar menu</a></li>
             <li><a href="#hero">Skip to hero email sender input</a></li>
@@ -38,7 +38,7 @@
               <span></span>
             </span>
           </div>
-          <nav id="navbarMenu" role="navigation" class="navbar-menu">
+          <nav id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
               <span class="navbar-item">
                 <a class="button is-white is-outlined" href="#">
@@ -77,14 +77,14 @@
         </div>
       </div>
     </div>
-    <div id="hero" role="hero" class="hero-body">
+    <div id="hero" class="hero-body">
       <div class="container has-text-centered">
         <div class="column is-6 is-offset-3">
           <h2 class="title has-text-white">We have web accessibility in mind</h2>
           <h5 class="subtitle has-text-white">
             Would you like to get the latest news?
           </h5>
-          <form role="form" aria-label="call to action form" class="box">
+          <form aria-label="call to action form" class="box">
             <div class="field is-grouped">
               <p class="control is-expanded">
                 <input class="input">
@@ -99,7 +99,7 @@
     </div>
   </header>
       <div id="breadcrumbs">
-        <nav class="breadcrumb is-centered is-medium" role="breadcrumb">
+        <nav class="breadcrumb is-centered is-medium">
           <ol>
             <li>
               <a href="./">MainPage</a>
@@ -117,8 +117,8 @@
         <p>This is an example of live region. </p>
         <p> The number automatically will update every min</p>
         <p><span class="tag is-medium is-link live-region" id="live-region" role="region" aria-live="polite">10</span></p>
-      <main role="main">
-  <section class="section" id="about" role="about" aria-labelledby="about-us">
+      <main>
+  <section class="section" id="about" aria-labelledby="about-us">
     <div class="section-heading has-text-centered" >
       <h2 id="about-us" class="title is-2">About Us</h2>
       <h5 class="subtitle is-5" id="details">We of all trades, master of "some"</div>
@@ -191,7 +191,7 @@
           &lt;/html&gt;
           </pre>
       <p>Maecenas eleifend sollicitudin dui, faucibus sollicitudin augue cursus non. Ut finibus eleifend arcu ut vehicula. Mauris eu est maximus est porta condimentum in eu justo. Nulla id iaculis sapien.</p>
-      <table role="table">
+      <table>
         <caption>Table heading</caption>
         <tr>
           <th scope="col">Header</th>
@@ -234,7 +234,7 @@
     </div>
   </section>
   
-  <section id="three-key-features" role="three-key-features" class="hero has-background-grey-light" aria-labelledby="key-features">
+  <section id="three-key-features" class="hero has-background-grey-light" aria-labelledby="key-features">
     <div class="container features">
       <div class="section-heading has-text-centered">
         <h2 id="key-features" class="title is-2">Three key features</h2>
@@ -450,7 +450,7 @@
     </div>
   </div>
   
-  <section id="upcoming-events" role="upcoming-events" aria-labelledby="upcoming-events-block" class="section has-background-grey-lighter">
+  <section id="upcoming-events" aria-labelledby="upcoming-events-block" class="section has-background-grey-lighter">
     <div class="container has-text-centered">
         <div class="section-heading has-text-centered">
           <h2 id="upcoming-events-block" class="title is-2">Upcoming events</h2>
@@ -524,7 +524,7 @@
       </div>
     </div>
   </section>
-  <section id="services" role="services" class="section" aria-labelledby="services-block">
+  <section id="services" class="section" aria-labelledby="services-block">
     <div class="section-heading has-text-centered">
       <h2 id="services-block" class="title is-2">Services</h2>
       <h5 class="subtitle is-5">What can I do for you?</h5>
@@ -572,7 +572,7 @@
     </div>
   </section>
   
-  <section id="photos" role="photos" class="section has-background-grey-lighter" aria-labelledby="photos-block">
+  <section id="photos" class="section has-background-grey-lighter" aria-labelledby="photos-block">
     <div class="container">
       <div class="section-heading has-text-centered">
         <h2 id="photos-block" class="title is-2">Photos from past events</h2>
@@ -906,7 +906,7 @@
         <h5 class="subtitle is-5">Don't hesitate, ask anything</h5>
       </div>
   
-      <form role="form" aria-label="contact form" class="column is-half is-offset-one-quarter box">
+      <form aria-label="contact form" class="column is-half is-offset-one-quarter box">
         <div class="field">
           <label class="label" for="name">Name</label>
           <div class="control">
@@ -988,10 +988,10 @@
   
         <div class="field is-grouped">
           <div class="control">
-            <button class="button is-link" aria-label="Click to submit" role="button">Submit</button>
+            <button class="button is-link" aria-label="Click to submit">Submit</button>
           </div>
           <div class="control">
-            <button class="button is-text" aria-label="Click to cancel" role="button">Cancel</button>
+            <button class="button is-text" aria-label="Click to cancel">Cancel</button>
           </div>
         </div>
       </form>
