implement required changes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
       <div class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a href="#" class="navbar-item logo-link">
+            <a href="index.html" class="navbar-item logo-link">
               <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt="epam home page">
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
-              <span></span>
-              <span></span>
-              <span></span>
+              <button class='burger-hidden' tabindex="0" aria-haspopup="true">Click here to open the menu</button>
+                <nav id="navigation">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                </nav>
             </span>
           </div>
 
@@ -89,8 +92,19 @@
       </div>
     </div>
   </header>
-
+  
   <main id="main-content">
+    
+  <div id="breadcrumbs">
+    <nav class="breadcrumb is-centered is-medium" role="breadcrumb">
+      <ul>
+        <li><a href="./" class="current" aria-current="page">MainPage</a><span></span></li>
+        <li><a href="index.html#nav">Pictures</a><span></span></li>
+        <li><a href="index.html#services-section">Services</a></li>
+      </ul>
+    </nav>
+  </div>
+
   <section class="section" id="about" aria-labelled="about-section">
     <div class="section-heading has-text-centered">
       <h2 class="title is-2" id="about-section">About Us</h2>
@@ -1088,35 +1102,35 @@
         <div class="column is-3 is-offset-2">
           <h3 class="is-3 title"><b>Lessons</b></h3>
           <ul>
-            <li><a>Lorem ipsum dolor sit amet</a></li>
-            <li><a>Vestibulum errato isse</a></li>
-            <li><a>Lorem ipsum dolor sit amet</a></li>
-            <li><a>Aisia caisia</a></li>
-            <li><a>Murphy's law</a></li>
-            <li><a>Flimsy Lavenrock</a></li>
-            <li><a>Maven Mousie Lavender</a></li>
+            <li><a tabindex="0">Lorem ipsum dolor sit amet</a></li>
+            <li><a tabindex="0">Vestibulum errato isse</a></li>
+            <li><a tabindex="0">Lorem ipsum dolor sit amet</a></li>
+            <li><a tabindex="0">Aisia caisia</a></li>
+            <li><a tabindex="0">Murphy's law</a></li>
+            <li><a tabindex="0">Flimsy Lavenrock</a></li>
+            <li><a tabindex="0">Maven Mousie Lavender</a></li>
           </ul>
         </div>
         <div class="column is-3">
           <h3 class="is-3 title"><b>News</b></h3>
           <ul>
-            <li><a>Labore et dolore magna aliqua</a></li>
-            <li><a>Kanban airis sum eschelor</a></li>
-            <li><a>Modular modern free</a></li>
-            <li><a>The king of clubs</a></li>
-            <li><a>The Discovery Dissipation</a></li>
-            <li><a>Course Correction</a></li>
-            <li><a>Better Angels</a></li>
+            <li><a tabindex="0">Labore et dolore magna aliqua</a></li>
+            <li><a tabindex="0">Kanban airis sum eschelor</a></li>
+            <li><a tabindex="0">Modular modern free</a></li>
+            <li><a tabindex="0">The king of clubs</a></li>
+            <li><a tabindex="0">The Discovery Dissipation</a></li>
+            <li><a tabindex="0">Course Correction</a></li>
+            <li><a tabindex="0">Better Angels</a></li>
           </ul>
         </div>
         <div class="column is-4">
           <h3 class="is-3 title"><b>Help</b></h3>
           <ul>
-            <li><a>Objects in space</a></li>
-            <li><a>Playing cards with coyote</a></li>
-            <li><a>Goodbye Yellow Brick Road</a></li>
-            <li><a>The Garden of Forking Paths</a></li>
-            <li><a>Future Shock</a></li>
+            <li><a tabindex="0">Objects in space</a></li>
+            <li><a tabindex="0">Playing cards with coyote</a></li>
+            <li><a tabindex="0">Goodbye Yellow Brick Road</a></li>
+            <li><a tabindex="0">The Garden of Forking Paths</a></li>
+            <li><a tabindex="0">Future Shock</a></li>
           </ul>
         </div>
       </div>
